Separated screenshot of step execution from after step hook ,#getgauge/html-report #186