@@ -31,8 +31,7 @@ public class AbstractExecutionStageTest extends TestCase {
 
     public void testMergingResultsPreviousFailing() throws Exception {
 
-        Byte aByte = new Byte("1");
-        byte b = aByte.byteValue();
+        Byte b = Byte.valueOf("1");
         byte[] bytes = {b};
         ByteString screenShot = ByteString.copyFrom(bytes);
 
@@ -41,7 +40,7 @@ public class AbstractExecutionStageTest extends TestCase {
                 setRecoverableError(false).
                 setErrorMessage("Previous failed").
                 setStackTrace("Previous stacktrace").
-                addScreenShot(screenShot).build();
+                setFailedScreenshot(screenShot).build();
         Spec.ProtoExecutionResult current = Spec.ProtoExecutionResult.newBuilder().setFailed(false).setExecutionTime(1100).build();
         Spec.ProtoExecutionResult result = new TestExecutionStage().mergeExecResults(previous, current);
 
@@ -50,12 +49,11 @@ public class AbstractExecutionStageTest extends TestCase {
         assertEquals("Previous failed", result.getErrorMessage());
         assertEquals("Previous stacktrace", result.getStackTrace());
         assertFalse(result.getRecoverableError());
-        assertEquals(screenShot, result.getScreenShotList().get(0));
+        assertEquals(screenShot, result.getFailedScreenshot());
     }
 
     public void testMergingResultsCurrentFailing() throws Exception {
-        Byte aByte = new Byte("2");
-        byte b = aByte.byteValue();
+        Byte b = Byte.valueOf("2");
         byte[] bytes = {b};
         ByteString screenShot = ByteString.copyFrom(bytes);
 
@@ -65,7 +63,7 @@ public class AbstractExecutionStageTest extends TestCase {
                 setRecoverableError(false).
                 setErrorMessage("current failed").
                 setStackTrace("current stacktrace").
-                addScreenShot(screenShot).build();
+                setFailedScreenshot(screenShot).build();
         Spec.ProtoExecutionResult result = new TestExecutionStage().mergeExecResults(previous, current);
 
         assertTrue(result.getFailed());
@@ -73,12 +71,11 @@ public class AbstractExecutionStageTest extends TestCase {
         assertEquals("current failed", result.getErrorMessage());
         assertEquals("current stacktrace", result.getStackTrace());
         assertFalse(result.getRecoverableError());
-        assertEquals(screenShot, result.getScreenShotList().get(0));
+        assertEquals(screenShot, result.getFailedScreenshot());
     }
 
     public void testMergingResultsBothFailing() throws Exception {
-        Byte aByte = new Byte("2");
-        byte b = aByte.byteValue();
+        Byte b = Byte.valueOf("2");
         byte[] bytes = {b};
         ByteString screenShotPrevious = ByteString.copyFrom(bytes);
         ByteString screenShotCurrent = ByteString.copyFromUtf8("hello");
@@ -88,13 +85,13 @@ public class AbstractExecutionStageTest extends TestCase {
                 setRecoverableError(true).
                 setErrorMessage("previous failed").
                 setStackTrace("previous stacktrace").
-                addScreenShot(screenShotPrevious).build();
+                setFailedScreenshot(screenShotPrevious).build();
         Spec.ProtoExecutionResult current = Spec.ProtoExecutionResult.newBuilder().setFailed(true).
                 setExecutionTime(1002).
                 setRecoverableError(false).
                 setErrorMessage("current failed").
                 setStackTrace("current stacktrace").
-                addScreenShot(screenShotCurrent).build();
+                setFailedScreenshot(screenShotCurrent).build();
         Spec.ProtoExecutionResult result = new TestExecutionStage().mergeExecResults(previous, current);
 
         assertTrue(result.getFailed());
@@ -102,7 +99,7 @@ public class AbstractExecutionStageTest extends TestCase {
         assertEquals("previous failed", result.getErrorMessage());
         assertEquals("previous stacktrace", result.getStackTrace());
         assertFalse(result.getRecoverableError());
-        assertEquals(screenShotPrevious, result.getScreenShotList().get(0));
+        assertEquals(screenShotPrevious, result.getFailedScreenshot());
     }
 
     public void testMergingResultsCurrentFailingAndIsRecoverable() throws Exception {
@@ -114,7 +111,7 @@ public class AbstractExecutionStageTest extends TestCase {
                 setRecoverableError(true).
                 setErrorMessage("current failed").
                 setStackTrace("current stacktrace").
-                addScreenShot(screenShotCurrent).build();
+                setFailedScreenshot(screenShotCurrent).build();
         Spec.ProtoExecutionResult result = new TestExecutionStage().mergeExecResults(previous, current);
 
         assertTrue(result.getFailed());
@@ -122,7 +119,7 @@ public class AbstractExecutionStageTest extends TestCase {
         assertEquals("current failed", result.getErrorMessage());
         assertEquals("current stacktrace", result.getStackTrace());
         assertTrue(result.getRecoverableError());
-        assertEquals(screenShotCurrent, result.getScreenShotList().get(0));
+        assertEquals(screenShotCurrent, result.getFailedScreenshot());
     }
 
     private class TestExecutionStage extends AbstractExecutionStage {
